--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,149 @@
 
 body {
-    background-color:rgb(39, 30, 26);  
-    margin: 0;
+  background-color: #030712;
+  margin: 0;
   }
 
-  .loginTitle{
-    color: white;
+  
+  .home-wrapper{
+    background-image: linear-gradient(to bottom, #030712,  #3b0764); 
+    top: 0;
+    height: 100vh;
+    overflow: hidden;
+    clip-path: inset(0);
+    position: relative;
   }
 
-  .loginWrapper{
-    margin-left: 40%;
+  .blob1{
+    top:10%;
+    left: 10%;
+    height: 15em;
+    width: 15em;
+    background-color: #8a12a2;
+    border-radius: 31% 45% 74% 35% / 38% 56% 51% 87%;
+    position: absolute;
+    z-index: 0;
+    mix-blend-mode: hard-light;
+    filter: blur(40px);
+
+   animation: ft 5s ease-in-out infinite alternate ;
+  }
+
+  @keyframes ft {
+    0%{
+        transform: rotate(0deg);
+        opacity: 100%;
+    } 
+  
+    100%{
+        transform: rotate(135deg);
+        opacity: 80%; 
+  
+    } 
+  }
+  
+  .home-title{
     margin-top: 5%;
+    margin-bottom: 0;
+    text-align: center;
+    font-family: 'Josefin_sans', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 4rem;
+    color: white;
+    
+  }
+
+
+  .login-title{
+    color: white;
+    font-family: 'Josefin_sans', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .login-wrapper{
+    margin: auto;
+    margin-top: 5%;
+    width: 20%;
+    height: 40vh;
+    text-align:center;
+    position: relative;
+    display: flex;
+  }
+
+  .login-border{
+    background-image: linear-gradient(to bottom right, #8b5cf6, #06b6d4);
+    filter: blur(5px);
+    border-radius: 25px; 
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top:0;
+    right:0;
+    z-index: 0;
+  }
+
+  .login-background{
+    background-color: #030712;
+    border-radius: 25px; 
+    margin: 1px;
+    height: calc(100% - 2px);
+    width: calc(100% - 2px);
+    z-index: 10;
+    position: absolute;
+    
+
+  }
+
+  .login-text{
+    margin: auto;
+    border-radius: 15px;
+    height: 20px;
+    width: 200px;
+    margin-bottom: 15px;
+    
+
+  }
+
+  button{
+    padding: 10px 24px;
+    border-radius: 15px;
+    text-decoration: none;
+    color: white;
+    background-color: #030712;
+    border: 2px solid white;
+    font-family: 'nunito', Courier, monospace;
+    font-size: 1rem;
+  }
+
+  .login-enter{
+    display: block;
+    color:white;
+    text-align: center;
+    font-family: 'nunito', Courier, monospace;
+    
+  }
+
+  .login-submit{
+    margin: auto;
+    padding: 10px 42px;
+    border-radius: 15px;
+    text-decoration: none;
+    color: white;
+    background-color: #030712;
+    border: 2px solid white;
+    font-family: 'nunito', Courier, monospace;
+    font-size: 1rem;
+
+  }
+
+  .login-demo{
+    margin: auto;
+    padding: 10px 24px;
+    border-radius: 15px;
+    text-decoration: none;
+    color: white;
+    background-color: #030712;
+    border: 2px solid white;
+    font-family: 'nunito', Courier, monospace;
+    font-size: 1rem;
   }
 
   .reloader{
@@ -36,12 +169,12 @@ body {
     width: 15%;
     margin-left: 2%;
     padding: 1%;
-    height: 80%;
-    background-color: rgb(143, 53, 15);
+    height: 90%;
+    background-color: #3b0764;
     border-radius: 15px;
     float: left;
     color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'nunito',Arial, Helvetica, sans-serif;
     display: flex;
     flex-direction: column;
   }
@@ -75,7 +208,7 @@ body {
     text-align: center;
     font-size: 5vh;
     margin: 2%;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:'Josefin_Sans', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
 }
 
@@ -84,5 +217,48 @@ body {
     width: 100%;
     
 }
+
+/* Fonts ---------------------------------------------------------------------------------------------------------- */
+
+@font-face {
+  font-family: 'Josefin_Sans';
+  src: url('./assets/JosefinSans-VariableFont_wght.woff2') format('woff2'),
+       url('./assets/JosefinSans-VariableFont_wght.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Teko';
+  src: url('./assets/Teko-VariableFont_wght.woff2') format('woff2'),
+       url('./assets/Teko-VariableFont_wght.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Nunito';
+  src: url('/src/assets/Nunito-VariableFont_wght.woff2') format('woff2'),
+       url('/src/assets/Nunito-VariableFont_wght.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Rubik';
+  src: url('/src/assets/Rubik-VariableFont_wght.woff2') format('woff2'),
+       url('/src/assets/Rubik-VariableFont_wght.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SUSE';
+  src: url('/src/assets/SUSE-VariableFont_wght.woff2') format('woff2'),
+       url('/src/assets/SUSE-VariableFont_wght.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 
 
