--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ body {
     margin: auto;
     margin-top: 5%;
     width: 20%;
-    height: 40vh;
+    height: 50%;
     text-align:center;
     position: relative;
     display: flex;
