--- a/src/App.css
+++ b/src/App.css
@@ -193,6 +193,28 @@ body {
     justify-content: flex-end
   }
 
+  .tempPoint{
+    position: absolute;
+    border-radius: 100%;
+    height: 15px;
+    width: 15px;
+    background-color: rgb(255, 4, 0);
+    border: 2px solid rgb(255, 92, 92);
+    animation: blink 2s ease-in-out infinite;
+  }
+
+  @keyframes blink {
+    0%{
+      opacity: 100%;
+    }
+    50% {
+      opacity: 40%;
+    }
+    100%{
+      opacity: 100%;
+    } 
+  }
+
 
   
   .point {
